--- a/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
+++ b/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
@@ -12,7 +12,7 @@
 \input{\templates/history}
 
 \settitolo{Piano di Qualifica}
-\setredattori{Raffaele Oliviero \\ Elia Scandaletti \\ Giovanni Cocco \\ Matteo Galvagni \\ Federico Marchi}
+\setredattori{Raffaele Oliviero \\ Elia Scandaletti \\ Giovanni Cocco \\ Matteo Galvagni \\ Federico Marchi \\ Andrea Volpe}
 \setdestuso{esterno}
 \setdescrizione{
 Questo documento serve a definire le metriche e i criteri di accettazione dei prodotti.
@@ -30,6 +30,7 @@ Questo documento serve a definire le metriche e i criteri di accettazione dei pr
 \addversione{2.4.0}{20/04/2022}{Alberto Nicoletti}{Redazione}{Aggiornamento per ciclo 4.}
 \addversione{2.4.1}{21/04/2022}{Elia Scandaletti}{Redazione}{Correzione grammatica.}
 \addversione{2.5.0}{01/05/2022}{Raffaele Oliviero}{Redazione}{Aggiornamento per ciclo 5.}
+\addversione{2.6.0}{04/05/2022}{Andrea Volpe}{Redazione}{Aggiornamento per ciclo 6.}
 
 \begin{document}
 
@@ -125,6 +126,7 @@ Fanno eccezione i verbali in cui ogni punto indica un verbale specifico.
 					(2022-04-13, 68.26)
 					(2022-04-20, 69.12)
 					(2022-04-27, 71.94)
+					(2022-05-04, 63.84)
 				};\addlegendentry{Verbali interni}
 
 			\addplot coordinates {
@@ -134,6 +136,7 @@ Fanno eccezione i verbali in cui ogni punto indica un verbale specifico.
 					(2022-04-13, 55.15)
 					(2022-04-20, 55.15)
 					(2022-05-01, 56.08)
+					(2022-05-04, 56.08)
 				};\addlegendentry{Norme di progetto}
 
 		\end{axis}
@@ -188,6 +191,7 @@ Fanno eccezione i verbali in cui ogni punto indica un verbale specifico.
 					(2022-04-13, 55.53)
 					(2022-04-20, 55.53)
 					(2022-05-01, 56.32)
+					(2022-05-04, 56.32)
 				};\addlegendentry{Analisi dei requisiti}
 
 			\addplot coordinates {
@@ -197,6 +201,7 @@ Fanno eccezione i verbali in cui ogni punto indica un verbale specifico.
 					(2022-04-13, 43.22)
 					(2022-04-20, 42.18)
 					(2022-05-01, 48.37)
+					(2022-05-04, 48.4)
 				};\addlegendentry{Piano di progetto}
 
 			\addplot coordinates {
@@ -206,6 +211,7 @@ Fanno eccezione i verbali in cui ogni punto indica un verbale specifico.
 					(2022-04-13, 56.15)
 					(2022-04-20, 56.08)
 					(2022-05-01, 57.01)
+					(2022-05-04, 56.42)
 				};\addlegendentry{Piano di qualifica}
 
 		\end{axis}
@@ -440,6 +446,7 @@ Ogni punto indica la variazione del consuntivo rispetto al preventivo di un cicl
 					(2022-04-14, -9)
 					(2022-04-20, +22)
 					(2022-05-01, -6.5)
+					(2022-05-04, -2)
 				};\addlegendentry{Documenti}
 			\addplot coordinates {
 					(2022-03-23, 0)
@@ -448,6 +455,7 @@ Ogni punto indica la variazione del consuntivo rispetto al preventivo di un cicl
 					(2022-04-14, -15)
 					(2022-04-20, +15)
 					(2022-05-01, +5.5)
+					(2022-05-04, +3)
 				};\addlegendentry{Software}
 		\end{axis}
 	\end{tikzpicture}
@@ -511,6 +519,7 @@ Ogni punto indica la variazione del consuntivo rispetto al preventivo di un cicl
 					(2022-04-14, -8)
 					(2022-04-20, +23)
 					(2022-05-01, -36)
+					(2022-05-04, +20)
 				};\addlegendentry{Documenti}
 			\addplot coordinates {
 					(2022-03-23, 0)
@@ -519,6 +528,8 @@ Ogni punto indica la variazione del consuntivo rispetto al preventivo di un cicl
 					(2022-04-14, -16)
 					(2022-04-20, +15)
 					(2022-05-01, +27)
+					(2022-05-01, +27)
+					(2022-05-04, +45)
 				};\addlegendentry{Software}
 		\end{axis}
 	\end{tikzpicture}
