modifica causa fallimento nel pagamento

--- a/docs/esterni/verbali/2022_05_05_E/2022_05_05_E.tex
+++ b/docs/esterni/verbali/2022_05_05_E/2022_05_05_E.tex
@@ -46,7 +46,7 @@ Il proponente si è mostrato soddisfatto del risultato ottenuto dal gruppo. Il p
 \\Riguardo l'interfaccia grafica è stata sollevata una considerazione da Fabio Pallaro. E' spesso preferibile differenziare l'interfaccia delle varie categorie d'utente. Nel nostro caso le grafiche della parte acquirente e della parte venditore sono molto simili.
 
 \subsection{Prova d'esposizione per il colloquio CA}
-Nella prova d'esposizione si è mostrato il funzionamento del prodotto in tutte le sue parti. Durante la dimostrazione il pagamento non è andato a buon fine. Questo problema è dovuto all'RPC settato nella network di Metamask. La soluzione è utilizzare un RPC privato.
+Nella prova d'esposizione si è mostrato il funzionamento del prodotto in tutte le sue parti. Durante la dimostrazione il pagamento non è andato a buon fine. Si è deciso di individuare la causa a fine dell'incontro.
 \\Il server è in locale sulla macchina dei componenti. Ciò significa che durante la dimostrazione l'acquirente ed il venditore devono essere simulati dalla stessa persona. Così è stato fatto anche durante il colloquio PB con il docente Cardin. Il proponente ha sottolineato che sarebbe preferibile trovare delle alternative in modo da differenziare i due utenti di Shop Chain. Le soluzioni discusse sono: 
 \begin{itemize}
 	\item server in hosting da parte di un componente del gruppo;
@@ -64,7 +64,8 @@ Il proponente ha chiesto e consigliato che venga tenuta la scadenza a 5 minuti. 
 \section{Impegni presi}
 \begin{itemize}
 \item Mantenere la scadenza transazione a 5 minuti.
-\item Utilizzare un RPC privato.
+\item Individuare la causa del fallimento della procedura di pagamento.
+\item Studiare una soluzione per evitare che tale errore si ripeta nel colloquio CA.
 \end{itemize}
 
 \end{document}
