--- a/docs/esterni/verbali/2022_05_05_E/2022_05_05_E.tex
+++ b/docs/esterni/verbali/2022_05_05_E/2022_05_05_E.tex
@@ -19,6 +19,7 @@ Verbale dell'incontro del 05/05/2022 con l'azienda SyncLab.
 
 \section{Informazioni}
 \textbf{Data}: 05/05/2022\\
+\textbf{Ora}: 16:00\\
 \textbf{Durata}: 45 minuti\\
 \textbf{Luogo}: Call Google Meet\\
 
@@ -37,17 +38,20 @@ Verbale dell'incontro del 05/05/2022 con l'azienda SyncLab.
 \section{Ordine del giorno}
 \begin{enumerate}
 	\item Illustrazione del prodotto completo;
-	\item prova d'esposizione per il colloquio CA.
+	\item prova d'esposizione per il colloquio CA;
+ 	\item varie ed eventuali.
 \end{enumerate}
 
 \section{Svolgimento}
 \subsection{Illustrazione del prodotto completo}
-Il proponente si è mostrato soddisfatto del risultato ottenuto dal gruppo. Il prodotto rispecchia le aspettative.
-\\Riguardo l'interfaccia grafica è stata sollevata una considerazione da Fabio Pallaro. E' spesso preferibile differenziare l'interfaccia delle varie categorie d'utente. Nel nostro caso le grafiche della parte acquirente e della parte venditore sono molto simili.
+Il proponente si è mostrato soddisfatto del risultato ottenuto dal gruppo. Il prodotto rispecchia le aspettative. \\
+Riguardo l'interfaccia grafica è stata sollevata una considerazione da Fabio Pallaro. \`E spesso preferibile differenziare l'interfaccia delle varie categorie d'utente. Nel nostro caso le grafiche della parte acquirente e della parte venditore sono molto simili.
+A questo riguardo, il gruppo ha risposto che tale scelta rispecchia il fatto che la piattaforma non è specifica per gli e-commerce. In altre parole, chiunque può essere sia venditore che acquirente. la nostra scelta è per evitare che uno stesso utente si trovi di fronte a due grafiche diverse.
 
 \subsection{Prova d'esposizione per il colloquio CA}
-Nella prova d'esposizione si è mostrato il funzionamento del prodotto in tutte le sue parti. Durante la dimostrazione il pagamento non è andato a buon fine. Si è deciso di individuare la causa a fine dell'incontro.
-\\Il server è in locale sulla macchina dei componenti. Ciò significa che durante la dimostrazione l'acquirente ed il venditore devono essere simulati dalla stessa persona. Così è stato fatto anche durante il colloquio PB con il docente Cardin. Il proponente ha sottolineato che sarebbe preferibile trovare delle alternative in modo da differenziare i due utenti di Shop Chain. Le soluzioni discusse sono: 
+Nella prova d'esposizione si è mostrato il funzionamento del prodotto in tutte le sue parti. Durante la dimostrazione il pagamento non è andato a buon fine. Si è deciso di individuare la causa a fine dell'incontro. \\
+Il server è in locale sulla macchina dei componenti. Ciò significa che durante la dimostrazione l'acquirente ed il venditore devono essere simulati dalla stessa persona. Così è stato fatto anche durante il colloquio PB con il docente Cardin.
+Il proponente ha sottolineato che sarebbe preferibile trovare delle alternative in modo da differenziare i due utenti di ShopChain. Le soluzioni discusse sono: 
 \begin{itemize}
 	\item server in hosting da parte di un componente del gruppo;
 	\item un'unica persona può usare più account Metamask.
@@ -63,9 +67,9 @@ Il proponente ha chiesto e consigliato che venga tenuta la scadenza a 5 minuti. 
 
 \section{Impegni presi}
 \begin{itemize}
-\item Mantenere la scadenza transazione a 5 minuti.
 \item Individuare la causa del fallimento della procedura di pagamento.
 \item Studiare una soluzione per evitare che tale errore si ripeta nel colloquio CA.
+\item Trovare un modo per permettere a due persone diverse di interagire nella dimostrazione nel colloquio CA.
 \end{itemize}
 
 \end{document}
