--- a/docs/template/history.tex
+++ b/docs/template/history.tex
@@ -1,16 +1,17 @@
 \usepackage{hyperref}
 \usepackage{array}
 \usepackage{tabularx}
+\usepackage{adjustbox}
 
 \newcounter{verscount}
 \setcounter{verscount}{0}
-\newcommand{\addversione}[5]{
+\newcommand{\addversione}[6][]{
 	\ifdefined\setversione
-		\setversione{#1}
+		\setversione{#2}
 	\else\fi
 	\stepcounter{verscount}
 	\expandafter\newcommand%
-		\csname ver\theverscount \endcsname{#1&#2&#3&#4&#5}
+		\csname ver\theverscount \endcsname{#2&#3&#4&#1&#5&#6}
 }
 
 \newcommand{\listversioni}{
@@ -25,13 +26,13 @@
 }
 
 \newcommand{\makeversioni}{
-	\begin{center}
-		\begin{tabularx}{\textwidth}{|c|c|c|c|X|}
+	\begin{adjustbox}{minipage=\paperwidth-1cm, center}
+		\begin{tabularx}{\textwidth}{|c|c|c|c|c|X|}
 		\hline
-		\textbf{Versione} & \textbf{Data} & \textbf{Persona} & \textbf{Attività} & \textbf{Descrizione} \\
+		\textbf{Versione} & \textbf{Data} & \textbf{Persona} & \textbf{Verificatore} & \textbf{Attività} & \textbf{Descrizione} \\
 		\hline
 		\listversioni
 		\end{tabularx}
-	\end{center}
+	\end{adjustbox}
 	\clearpage
 }
