aggiunta versione e pubblicati i files

--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -36,6 +36,8 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \addversione{2.8.0}{21/04/2022}{Raffaele Oliviero}{Redazione}{Aggiunto preventivo per ciclo 5.}
 \addversione{2.9.0}{27/04/2022}{Raffaele Oliviero}{Redazione}{Chiusura ciclo 5.}
 \addversione{2.10.0}{28/04/2022}{Andrea Volpe}{Redazione}{Aggiunto preventivo per ciclo 6.}
+\addversione{2.10.1}{07/05/2022}{Matteo Galvagni}{Redazione}{Correzione dopo revisione PB.}
+
 
 \def\pgfcalendarmonthitname#1{%
 \ifcase#1 \or Gennaio\or Febbraio\or Marzo\or Aprile\or Maggio\or Giugno\or Luglio\or Agosto\or Settembre\or Ottobre\or Novembre\or Dicembre\fi%
