--- a/docs/interni/norme_di_progetto/norme_di_progetto.tex
+++ b/docs/interni/norme_di_progetto/norme_di_progetto.tex
@@ -8,7 +8,7 @@
 \settitolo{Norme di progetto}
 \setprogetto{ShopChain}
 \setcommittenti{SyncLab}
-\setredattori{Elia Scandaletti \\ Raffaele Oliviero \\ Giovanni Cocco \\ Alberto Nicoletti}
+\setredattori{Elia Scandaletti \\ Raffaele Oliviero \\ Giovanni Cocco \\ Alberto Nicoletti \\ Matteo Galvagni}
 \setdestuso{interno}
 \setdescrizione{
 Questo documento contiene le procedure, gli strumenti e i criteri di qualità che verranno usati nel progetto.
@@ -27,6 +27,8 @@ Questo documento contiene le procedure, gli strumenti e i criteri di qualità ch
 \addversione{2.0.0}{20/03/2022}{Alberto Nicoletti}{Redazione}{Rifacimento documento completo.}
 \addversione{2.0.1}{17/04/2022}{Elia Scandaletti}{Redazione}{Aggiornamento processo fornitura.}
 \addversione{2.0.2}{18/04/2022}{Elia Scandaletti}{Redazione}{Correzione grammatica.}
+\addversione{2.0.3}{07/05/2022}{Matteo Galvagni}{Redazione}{Correzione dopo revisione PB.}
+
 
 
 \begin{document}
