--- a/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
+++ b/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
@@ -30,7 +30,7 @@ Questo documento serve a definire le metriche e i criteri di accettazione dei pr
 \addversione{2.4.0}{20/04/2022}{Alberto Nicoletti}{Redazione}{Aggiornamento per ciclo 4.}
 \addversione{2.4.1}{21/04/2022}{Elia Scandaletti}{Redazione}{Correzione grammatica.}
 \addversione{2.5.0}{01/05/2022}{Raffaele Oliviero}{Redazione}{Aggiornamento per ciclo 5.}
-\addversione{2.6.0}{04/05/2022}{Andrea Volpe}{Redazione}{Aggiornamento per ciclo 6.}
+\addversione[Raffaele Oliviero]{2.6.0}{04/05/2022}{Andrea Volpe}{Redazione}{Aggiornamento per ciclo 6.}
 
 \begin{document}
 
