analisi narrativa pdp

--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -142,6 +142,14 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 
 \textbf{Data di fine prevista}: 12 Maggio 2022
 
+\subsection{Stato d'avanzamento corrente}
+La data di consegna è postiticipata di due settimane rispetto al preventivo iniziale. Non si prevedono ulteriori posticipi. In quella data - o prima - verrà richiesto il colloquio CA.
+\\Con la richesta di colloquio CA si prevede di venire a conoscenza dei contenuti della relativa presentazione. Non appena saranno resi noti si inizierà la preparazione per il colloquio.
+\\Il prodotto software è completo in tutte le sue parti. E' ora in corso la fase di validazione con controllo di soddisfazione dei requisiti.
+\\I manuali utente sono completi. Il manuale sviluppatore è in conclusione.
+\\Sono in atto aggiornamenti alla documentazione, in linea con la valutazione PB del prof. Vardanega.
+\\La gestione di progetto procede senza intralci. Il WoW adottato a seguito delle problematiche del primo periodo ha dato i suoi frutti.
+
 \section{Metodo di lavoro}
 Il metodo di lavoro fa uso del framework SCRUM. Si farà inoltre uso della tecnica di Continuos Integration.\\
 Questo metodo si presta meglio di un modello a cascata data la difficoltà di realizzare una pianificazione accurata a monte con tecnologie poco conosciute.\\\\
