--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -37,6 +37,7 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \addversione{2.9.0}{27/04/2022}{Raffaele Oliviero}{Redazione}{Chiusura ciclo 5.}
 \addversione{2.10.0}{28/04/2022}{Andrea Volpe}{Redazione}{Aggiunto preventivo per ciclo 6.}
 \addversione[Alberto Nicoletti]{2.11.0}{04/05/2022}{Andrea Volpe}{Redazione}{Chiusura ciclo 6.}
+\addversione[Elia Scandaletti]{2.11.1}{07/05/2022}{Matteo Galvagni}{Redazione}{Correzione dopo revisione PB.}
 
 \def\pgfcalendarmonthitname#1{%
 \ifcase#1 \or Gennaio\or Febbraio\or Marzo\or Aprile\or Maggio\or Giugno\or Luglio\or Agosto\or Settembre\or Ottobre\or Novembre\or Dicembre\fi%
@@ -143,24 +144,24 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \textbf{Data di fine prevista}: 12 Maggio 2022
 
 \section{Metodo di lavoro}
-Il metodo di lavoro fa uso del framework SCRUM. Si farà inoltre uso della tecnica di Continuos Integration.\\
+Il metodo di lavoro fa uso del framework Scrum. Si farà inoltre uso della tecnica di Continuos Integration.\\
 Questo metodo si presta meglio di un modello a cascata data la difficoltà di realizzare una pianificazione accurata a monte con tecnologie poco conosciute.\\\\
 Tuttavia si terrà che:
 \begin{itemize}
     \item dei cicli non vadano a buon fine portando a iterazioni (ove incrementi sono sempre preferibili);
     \item delle attività critiche blocchino le altre portando a una perdita di parallelismo all'interno del gruppo.
 \end{itemize}
-I cicli di SCRUM avverranno ad intervalli settimanali, ogni ciclo inizia con una riunione che comprende:
+I cicli di Scrum avverranno ad intervalli settimanali, ogni ciclo inizia con una riunione che comprende:
 \begin{itemize}
     \item resoconto della settimana precedente;
     \item focus su problematiche riscontrate e soluzioni adottate;
     \item aggiornamento della pianificazione della settimana successiva;
     \item assegnazioni degli item ai componenti del gruppo da parte del responsabile.
 \end{itemize}
-I cicli di SCRUM verranno elencati nella sezione seguente adottando una approccio schematico e disciplinato.\\
+I cicli di Scrum verranno elencati nella sezione seguente adottando una approccio schematico e disciplinato.\\
 Il primo ciclo sarà riassuntivo del lavoro fino alla conclusione dell'RTB. Include anche il lavoro svolto tra la prima richiesta di RTB e il superamento effettivo.
 
-\section{Sprint di SCRUM}
+\section{Sprint di Scrum}
 
 \subsection{Sprint 0}
 \textbf{Data di inizio:} 9-11-2021\\
@@ -1069,7 +1070,7 @@ Il primo ciclo sarà riassuntivo del lavoro fino alla conclusione dell'RTB. Incl
         \hline
         \textbf{Problema} & \textbf{Soluzione adottata}\\
         \hline
-        Durante il ciclo si è discusso più volte sul fatto di implementare l'attività "Aggiungere breadcrub", rallentando il lavoro. & Si è deciso di seguire le attività preventivate, quindi realizzare la breadcrub. \\
+        Durante il ciclo si è discusso più volte sul fatto di implementare l'attività "Aggiungere breadcrumb", rallentando il lavoro. & Si è deciso di seguire le attività preventivate, quindi realizzare la breadcrumb. \\
         \hline
         E' emerso durante il ciclo che i bottoni di copy non sono realizzabili per la versione mobile della webapp. & Si è deciso di modificare l'attività durante il ciclo, implementando i bottoni solo per la versione desktop della webapp. \\
         \hline
