--- a/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
+++ b/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
@@ -31,6 +31,7 @@ Questo documento serve a definire le metriche e i criteri di accettazione dei pr
 \addversione{2.4.1}{21/04/2022}{Elia Scandaletti}{Redazione}{Correzione grammatica.}
 \addversione{2.5.0}{01/05/2022}{Raffaele Oliviero}{Redazione}{Aggiornamento per ciclo 5.}
 \addversione[Raffaele Oliviero]{2.6.0}{04/05/2022}{Andrea Volpe}{Redazione}{Aggiornamento per ciclo 6.}
+\addversione[Revisore]{2.7.0}{04/05/2022}{Raffaele}{Redazione}{Aggiunta analisi d'insieme}
 
 \begin{document}
 
@@ -40,6 +41,19 @@ Questo documento serve a definire le metriche e i criteri di accettazione dei pr
 
 \tableofcontents
 \clearpage
+
+\section{Analisi d'insieme}
+\paragraph{Qualità di prodotto}
+La qualità dei documenti in generale è soddisfacente. \\
+L'indice di Gulpease dei documenti che superano la soglia ottimale rimane tendenzialmente costante. \\
+I documenti che superano solo la soglia di accettabilità hanno invece registrato un leggero aumento del loro indice, ma non raggiungono ancora l'ottimalità.\\
+
+É da molto che non vengono effettuati test su certi prodotti software e, anche se non sono state effettuate modifiche, ciò potrebbe dare l'impressione al proponente che la qualità di tali prodotti non sia garantita, riflettendo negativamente sull'operato del gruppo WSWS.
+
+\paragraph{Qualità di processo}
+Negli ultimi due cicli di sprint è stato sovrastimato il costo in ore dei ruoli di amministratore, analista e progettista, mentre è stato sottostimato il costo in ore dei ruoli di responsabile e programmatore. \\
+A causa dell'alto costo orario del responsabile, queste stime errate hanno portato nell'ultimo sprint ad un costo superiore a quello preventivato. \\
+I valori sono ancora accettabili, ma è auspicabile che vengano prese iniziative per meglio stimare le ore necessarie al fine di evitare che la situazione si ripeta o che peggiori ulteriormente.
 
 \section{Qualità di prodotto}
 
