--- a/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
+++ b/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
@@ -22,19 +22,18 @@
 Analisi dei requisiti del progetto ShopChain con casi d'uso e requisiti.
 }
 
-\addversione{0.0.0}{11/12/2021}{Alberto Nicoletti}{Redazione}{Strutturazione del documento.}
-\addversione{0.0.1}{03/01/2021}{Andrea Volpe}{Redazione}{Stesura casi d'uso.}
-\addversione{0.0.2}{21/01/2022}{Alberto Nicoletti}{Redazione}{Stesura requisiti.}
-\addversione{0.0.3}{21/01/2022}{Andrea Volpe}{Redazione}{Riorganizzazione requisiti.}
-\addversione{0.1.0}{04/02/2022}{Giovanni Cocco}{Revisione}{Correzioni varie.}
-\addversione{0.1.1}{05/02/2022}{Alberto Nicoletti}{Redazione}{Adeguamento casi d'uso a tecnologie scelte.}
-\addversione{0.1.2}{07/02/2022}{Andrea Volpe}{Redazione}{Modifica dei requisiti come concordato nell'incontro del 04/02/2022.}
-\addversione{1.0.0}{09/02/2022}{Elia Scandaletti}{Approvazione}{Approvazione per RTB.}
-\addversione{1.0.1}{01/03/2022}{Giovanni Cocco}{Redazione}{Approfondimento requisiti funzionali.}
-\addversione{1.0.2}{01/03/2022}{Elia Scandaletti}{Redazione}{Applicazione indicazioni del prof. Cardin.}
-\addversione{1.0.3}{11/03/2022}{Alberto Nicoletti}{Redazione}{Applicazione indicazioni del prof. Cardin.}
-\addversione{1.1.0}{01/04/2022}{Andrea Volpe}{Redazione}{Riadattato casi d'uso e requisiti in base alle nuove modifiche.}
-\addversione{1.1.1}{13/04/2022}{Elia Scandaletti}{Redazione}{Correzione grammatica.}
+\addversione{0.0.0}{11/12/2021}{Alberto Nicoletti}{Elia Scandaletti}{Strutturazione del documento.}
+\addversione{0.0.1}{03/01/2021}{Andrea Volpe}{Elia Scandaletti}{Stesura casi d'uso.}
+\addversione{0.0.2}{21/01/2022}{Alberto Nicoletti}{Elia Scandaletti}{Stesura requisiti.}
+\addversione{0.0.3}{21/01/2022}{Andrea Volpe}{Elia Scandaletti}{Riorganizzazione requisiti.}
+\addversione{0.1.0}{04/02/2022}{Giovanni Cocco}{Elia Scandaletti}{Correzioni varie.}
+\addversione{0.1.1}{05/02/2022}{Alberto Nicoletti}{Elia Scandaletti}{Adeguamento casi d'uso a tecnologie scelte.}
+\addversione{1.0.0}{07/02/2022}{Andrea Volpe}{Elia Scandaletti}{Modifica dei requisiti come concordato nell'incontro del 04/02/2022.}
+\addversione{1.0.1}{01/03/2022}{Giovanni Cocco}{Elia Scandaletti}{Approfondimento requisiti funzionali.}
+\addversione{1.0.2}{01/03/2022}{Elia Scandaletti}{Giovanni Cocco}{Applicazione indicazioni del prof. Cardin.}
+\addversione{1.0.3}{11/03/2022}{Alberto Nicoletti}{Elia Scandaletti}{Applicazione indicazioni del prof. Cardin.}
+\addversione{1.1.0}{01/04/2022}{Andrea Volpe}{Giovanni Cocco}{Riadattato casi d'uso e requisiti in base alle nuove modifiche.}
+\addversione{1.1.1}{13/04/2022}{Elia Scandaletti}{Giovanni Cocco}{Correzione grammatica.}
 
 
 \begin{document}
