--- a/docs/esterni/analisi_delle_tecnologie/analisi_delle_tecnologie.tex
+++ b/docs/esterni/analisi_delle_tecnologie/analisi_delle_tecnologie.tex
@@ -15,12 +15,11 @@
 Analisi delle tecnologie.
 }
 
-\addversione{0.0.0}{24/12/2021}{Matteo Galvagni}{Redazione}{Stesura iniziale sezione Introduzione e Blockchain.}
-\addversione{0.0.1}{28/12/2021}{Federico Marchi}{Redazione}{Stesura iniziale sezione Backend, Pagamento e Database.}
-\addversione{0.0.2}{05/01/2022}{Matteo Galvagni}{Redazione}{Stesura iniziale sezione Scansione QR code.}
-\addversione{0.0.3}{10/02/2022}{Matteo Galvagni}{Redazione}{Aggiornamento di alcune tecnologie.}
-\addversione{0.0.4}{11/02/2022}{Marchi Federico}{Redazione}{Correzione indice di Gulpease.}
-\addversione{1.0.0}{11/02/2022}{Elia Scandaletti}{Approvazione}{Approvazione per RTB.}
+\addversione{0.0.0}{24/12/2021}{Matteo Galvagni}{Giovanni Cocco}{Stesura iniziale sezione Introduzione e Blockchain.}
+\addversione{0.0.1}{28/12/2021}{Federico Marchi}{Alberto Nicoletti}{Stesura iniziale sezione Backend, Pagamento e Database.}
+\addversione{0.0.2}{05/01/2022}{Matteo Galvagni}{Andrea Volpe}{Stesura iniziale sezione Scansione QR code.}
+\addversione{0.0.3}{10/02/2022}{Matteo Galvagni}{Andrea Volpe}{Aggiornamento di alcune tecnologie.}
+\addversione{1.0.0}{11/02/2022}{Marchi Federico}{Elia Scandaletti}{Correzione indice di Gulpease.}
 \begin{document}
 
 \makefrontpage
