--- a/docs/esterni/manuale_acquirente/manuale_acquirente.tex
+++ b/docs/esterni/manuale_acquirente/manuale_acquirente.tex
@@ -13,7 +13,7 @@
 \setdescrizione{
 Manuale acquirente.
 }
-\addversione{0.1.0}{13/04/2022}{Federico Marchi}{Redazione}{Stesura iniziale}
+\addversione{0.1.0}{13/04/2022}{Federico Marchi}{G. Cocco, M. Galvagni}{Stesura iniziale}
 
 \begin{document}
 
