--- a/docs/esterni/manuale_sviluppatore/manuale_sviluppatore.tex
+++ b/docs/esterni/manuale_sviluppatore/manuale_sviluppatore.tex
@@ -15,7 +15,7 @@
 Manuale installazione.
 }
 
-\addversione{0.0.0}{04/04/2022}{Federico Marchi}{Redazione}{Stesura Manuale}
+\addversione{0.0.0}{04/04/2022}{Federico Marchi}{Matteo Galvagni}{Stesura Manuale}
 
 \begin{document}
 \makefrontpage
