--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -19,25 +19,24 @@
 Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei costi sostenuti fino ad oggi e li confronta con i costi preventivati, in relazione agli obiettivi fissati.
 }
 
-\addversione{0.0.0}{13/11/2021}{Elia Scandaletti}{Redazione}{Stesura iniziale.}
-\addversione{0.0.1}{07/02/2022}{Elia Scandaletti}{Redazione}{Aggiornamento impegni secondo Verbale del 04/02/2022.}
-\addversione{0.0.2}{11/02/2022}{Elia Scandaletti}{Redazione}{Aggiornamento per RTB.}
-\addversione{1.0.0}{12/02/2022}{Giovanni Cocco}{Approvazione}{Approvazione per RTB.}
-\addversione{2.0.0}{19/03/2022}{Giovanni Cocco}{Redazione}{Rifacimento documento.}
-\addversione{2.1.0}{27/03/2022}{Giovanni Cocco}{Redazione}{Ciclo 1.}
-\addversione{2.2.0}{03/04/2021}{Matteo Galvagni}{Redazione}{Aggiunto preventivo per ciclo 2.}
-\addversione{2.3.0}{07/04/2021}{Matteo Galvagni}{Redazione}{Aggiornamento ciclo 2.}
-\addversione{2.4.0}{07/04/2022}{Federico Marchi}{Redazione}{Aggiunto preventivo per ciclo 3.}
-\addversione{2.4.1}{08/04/2022}{Matteo Galvagni}{Redazione}{Correzione errore Gantt.}
-\addversione{2.5.0}{13/04/2022}{Federico Marchi}{Redazione}{Aggiornamento ciclo 3.}
-\addversione{2.6.0}{16/04/2022}{Alberto Nicoletti}{Redazione}{Aggiunto preventivo per ciclo 4.}
-\addversione{2.7.0}{20/04/2022}{Alberto Nicoletti}{Redazione}{Chiusura ciclo 4.}
-\addversione{2.7.1}{21/04/2022}{Elia Scandaletti}{Redazione}{Correzione grammatica.}
-\addversione{2.8.0}{21/04/2022}{Raffaele Oliviero}{Redazione}{Aggiunto preventivo per ciclo 5.}
-\addversione{2.9.0}{27/04/2022}{Raffaele Oliviero}{Redazione}{Chiusura ciclo 5.}
-\addversione{2.10.0}{28/04/2022}{Andrea Volpe}{Redazione}{Aggiunto preventivo per ciclo 6.}
-\addversione[Alberto Nicoletti]{2.11.0}{04/05/2022}{Andrea Volpe}{Redazione}{Chiusura ciclo 6.}
-\addversione[Elia Scandaletti]{2.11.1}{07/05/2022}{Matteo Galvagni}{Redazione}{Correzione dopo revisione PB.}
+\addversione{0.0.0}{13/11/2021}{Elia Scandaletti}{Giovanni Cocco}{Stesura iniziale.}
+\addversione{0.0.1}{07/02/2022}{Elia Scandaletti}{Giovanni Cocco}{Aggiornamento impegni secondo Verbale del 04/02/2022.}
+\addversione{1.0.0}{11/02/2022}{Elia Scandaletti}{Giovanni Cocco}{Aggiornamento per RTB.}
+\addversione{2.0.0}{19/03/2022}{Giovanni Cocco}{Elia Scandaletti}{Rifacimento documento.}
+\addversione{2.1.0}{27/03/2022}{Giovanni Cocco}{Elia Scandaletti}{Ciclo 1.}
+\addversione{2.2.0}{03/04/2021}{Matteo Galvagni}{Giovanni Cocco}{Aggiunto preventivo per ciclo 2.}
+\addversione{2.3.0}{07/04/2021}{Matteo Galvagni}{Raffaele Oliviero}{Aggiornamento ciclo 2.}
+\addversione{2.4.0}{07/04/2022}{Federico Marchi}{Giovanni Cocco}{Aggiunto preventivo per ciclo 3.}
+\addversione{2.4.1}{08/04/2022}{Matteo Galvagni}{Giovanni Cocco}{Correzione errore Gantt.}
+\addversione{2.5.0}{13/04/2022}{Federico Marchi}{Giovanni Cocco}{Aggiornamento ciclo 3.}
+\addversione{2.6.0}{16/04/2022}{Alberto Nicoletti}{Giovanni Cocco}{Aggiunto preventivo per ciclo 4.}
+\addversione{2.7.0}{20/04/2022}{Alberto Nicoletti}{Giovanni Cocco}{Chiusura ciclo 4.}
+\addversione{2.7.1}{21/04/2022}{Elia Scandaletti}{Giovanni Cocco}{Correzione grammatica.}
+\addversione{2.8.0}{21/04/2022}{Raffaele Oliviero}{Andrea Volpe}{Aggiunto preventivo per ciclo 5.}
+\addversione{2.9.0}{27/04/2022}{Raffaele Oliviero}{Andrea Volpe}{Chiusura ciclo 5.}
+\addversione{2.10.0}{28/04/2022}{Andrea Volpe}{Raffaele Oliviero}{Aggiunto preventivo per ciclo 6.}
+\addversione{2.11.0}{04/05/2022}{Andrea Volpe}{Alberto Nicoletti}{Chiusura ciclo 6.}
+\addversione{2.11.1}{07/05/2022}{Matteo Galvagni}{Elia Scandaletti}{Correzione dopo revisione PB.}
 
 \def\pgfcalendarmonthitname#1{%
 \ifcase#1 \or Gennaio\or Febbraio\or Marzo\or Aprile\or Maggio\or Giugno\or Luglio\or Agosto\or Settembre\or Ottobre\or Novembre\or Dicembre\fi%
