--- a/docs/interni/norme_di_progetto/norme_di_progetto.tex
+++ b/docs/interni/norme_di_progetto/norme_di_progetto.tex
@@ -14,20 +14,20 @@
 Questo documento contiene le procedure, gli strumenti e i criteri di qualità che verranno usati nel progetto.
 }
 
-\addversione{0.0.0}{13/11/2021}{Elia Scandaletti}{Redazione}{Stesura documentazione.}
-\addversione{0.0.1}{14/11/2021}{Elia Scandaletti}{Redazione}{Stesura configurazione Github.}
-\addversione{0.0.2}{07/12/2021}{Elia Scandaletti}{Redazione}{Inserimento norme da verbale del 01/12/2021.}
-\addversione{0.0.3}{22/12/2021}{Elia Scandaletti}{Redazione}{Stesura regole stesura verbali.}
-\addversione{0.0.4}{09/01/2022}{Raffaele Oliviero}{Redazione}{Ristrutturazione documento.}
-\addversione{0.0.5}{09/01/2022}{Raffaele Oliviero}{Redazione}{Stesura struttura del piano di qualifica e della verifica e validazione.}
-\addversione{0.0.6}{16/01/2022}{Elia Scandaletti}{Redazione}{Adeguamento di verifica e validazione secondo decisioni collettive.}
-\addversione{0.0.7}{04/02/2022}{Giovanni Cocco}{Redazione}{Stesure delle revisioni di avanzamento interne.}
-\addversione{0.0.8}{08/02/2022}{Raffaele Oliviero}{Redazione}{Stesura di: analisi dei requisiti, analisi delle tecnologie e piano di progetto.}
-\addversione{0.0.9}{16/02/2022}{Giovanni Cocco}{Redazione}{Stesura di norme software.}
-\addversione{2.0.0}{20/03/2022}{Alberto Nicoletti}{Redazione}{Rifacimento documento completo.}
-\addversione{2.0.1}{17/04/2022}{Elia Scandaletti}{Redazione}{Aggiornamento processo fornitura.}
-\addversione{2.0.2}{18/04/2022}{Elia Scandaletti}{Redazione}{Correzione grammatica.}
-\addversione{2.0.3}{07/05/2022}{Matteo Galvagni}{Redazione}{Correzione dopo revisione PB.}
+\addversione{0.0.0}{13/11/2021}{Elia Scandaletti}{Giovanni Cocco}{Stesura documentazione.}
+\addversione{0.0.1}{14/11/2021}{Elia Scandaletti}{Giovanni Cocco}{Stesura configurazione Github.}
+\addversione{0.0.2}{07/12/2021}{Elia Scandaletti}{Giovanni Cocco}{Inserimento norme da verbale del 01/12/2021.}
+\addversione{0.0.3}{22/12/2021}{Elia Scandaletti}{Giovanni Cocco}{Stesura regole stesura verbali.}
+\addversione{0.0.4}{09/01/2022}{Raffaele Oliviero}{Giovanni Cocco}{Ristrutturazione documento.}
+\addversione{0.0.5}{09/01/2022}{Raffaele Oliviero}{Giovanni Cocco}{Stesura struttura del piano di qualifica e della verifica e validazione.}
+\addversione{0.0.6}{16/01/2022}{Elia Scandaletti}{Giovanni Cocco}{Adeguamento di verifica e validazione secondo decisioni collettive.}
+\addversione{0.0.7}{04/02/2022}{Giovanni Cocco}{Elia Scandaletti}{Stesure delle revisioni di avanzamento interne.}
+\addversione{0.0.8}{08/02/2022}{Raffaele Oliviero}{Elia Scandaletti}{Stesura di: analisi dei requisiti, analisi delle tecnologie e piano di progetto.}
+\addversione{0.0.9}{16/02/2022}{Giovanni Cocco}{Elia Scandalett}{Stesura di norme software.}
+\addversione{2.0.0}{20/03/2022}{Alberto Nicoletti}{Raffaele Oliviero}{Rifacimento documento completo.}
+\addversione{2.0.1}{17/04/2022}{Elia Scandaletti}{Raffaele Oliviero}{Aggiornamento processo fornitura.}
+\addversione{2.0.2}{18/04/2022}{Elia Scandaletti}{Giovanni Cocco}{Correzione grammatica.}
+\addversione{2.0.3}{07/05/2022}{Matteo Galvagni}{Elia Scandaletti}{Correzione dopo revisione PB.}
 
 
 
