--- a/docs/esterni/specifiche_architetturali/specifiche_architetturali.tex
+++ b/docs/esterni/specifiche_architetturali/specifiche_architetturali.tex
@@ -22,7 +22,7 @@ Architettura del progetto
 }
 
 \addversione{1.0.0}{23/02/2022}{Giovanni Cocco}{Federico Marchi}{Creazione del documento.}
-\addversione{1.1.0}{03/04/2022}{E. Scandaletti, M. Galvagni}{Federico Marchi}{Aggiunti dettagli dell'architettura.}
+\addversione{1.1.0}{03/04/2022}{Matteo Galvagni}{Federico Marchi}{Aggiunti dettagli dell'architettura.}
 \addversione{1.1.1}{13/04/2022}{Elia Scandaletti}{Federico Marchi}{Aggiornamento link.}
 \addversione{1.2.0}{23/04/2022}{Giovanni Cocco}{Matteo Galvagni}{Aggiornamento diagrammi.}
 
