--- a/docs/esterni/specifiche_architetturali/specifiche_architetturali.tex
+++ b/docs/esterni/specifiche_architetturali/specifiche_architetturali.tex
@@ -21,10 +21,10 @@
 Architettura del progetto
 }
 
-\addversione{1.0.0}{23/02/2022}{Giovanni Cocco}{Redazione}{Creazione del documento.}
-\addversione{1.1.0}{03/04/2022}{E. Scandaletti, M. Galvagni}{Redazione}{Aggiunti dettagli dell'architettura.}
-\addversione{1.1.1}{13/04/2022}{Elia Scandaletti}{Redazione}{Aggiornamento link.}
-\addversione{1.2.0}{23/04/2022}{Giovanni Cocco}{Redazione}{Aggiornamento diagrammi.}
+\addversione{1.0.0}{23/02/2022}{Giovanni Cocco}{Federico Marchi}{Creazione del documento.}
+\addversione{1.1.0}{03/04/2022}{Matteo Galvagni}{Federico Marchi}{Aggiunti dettagli dell'architettura.}
+\addversione{1.1.1}{13/04/2022}{Elia Scandaletti}{Federico Marchi}{Aggiornamento link.}
+\addversione{1.2.0}{23/04/2022}{Giovanni Cocco}{Matteo Galvagni}{Aggiornamento diagrammi.}
 
 \begin{document}
 
