--- a/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
+++ b/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
@@ -32,6 +32,7 @@ Questo documento serve a definire le metriche e i criteri di accettazione dei pr
 \addversione{2.4.1}{21/04/2022}{Elia Scandaletti}{Giovanni Cocco}{Correzione grammatica.}
 \addversione{2.5.0}{01/05/2022}{Raffaele Oliviero}{Andrea Volpe}{Aggiornamento per ciclo 5.}
 \addversione{2.6.0}{04/05/2022}{Andrea Volpe}{Raffaele Oliviero}{Aggiornamento per ciclo 6.}
+\addversione{2.7.0}{04/05/2022}{Raffaele Oliviero}{}{Aggiunta analisi d'insieme.}
 
 \begin{document}
 
