--- a/docs/interni/norme_di_progetto/norme_di_progetto.tex
+++ b/docs/interni/norme_di_progetto/norme_di_progetto.tex
@@ -331,7 +331,7 @@ Ogni verbale deve riportare:
 \item Luogo;
 \item Partecipanti;
 \item Ordine del giorno;
-\item Riassunto dei contenuti;
+\item Riassunto dei contenuti / Svolgimento (per verbale chiusura ciclo di sprint);
 \item Eventuali impegni assunti.
 \end{itemize}
 \subparagraph{Stesura}\label{documentazione-documenti-verbali-stesura}
@@ -340,7 +340,17 @@ All'inizio di ogni riunione verrà nominato un partecipante che redigerà il ver
 Chi redige il verbale ha 24 ore per completare il lavoro. Chi approva il verbale ha 24 ore per approvarlo o segnalare eventuali correzioni da apportare.
 
 Nel secondo caso, il redattore avrà ulteriori 24 ore per adeguarsi alle indicazioni.
-
+\subparagraph{Dettagli} %TODO: inserire label
+In caso di verbale di chiusura di ciclo di sprint, la parte di \textit{svolgimento} dovà essere strutturata nel seguente modo:
+\begin{itemize}
+	\item Resoconto del ciclo di sprint precedente
+	\item Criticità del ciclo di sprint precedente
+	\item Task per il ciclo di sprint successivo:
+    \begin{itemize}
+		\item Indicare il responsabile per il ciclo di sprint successivo
+		\item Elencare le attività numerate con il corrispondente id della issue su GitHub
+	\end{itemize}
+\end{itemize}
 \paragraph{Piano di Qualifica}\label{documentazione-documenti-piano-di-qualifica}
 \subparagraph{Scopo}
 Lo scopo del \textit{Piano di Qualifica} è definire le metriche e i requisiti minimi di qualità per l'approvazione dei prodotti del progetto.
@@ -348,7 +358,6 @@ Lo scopo del \textit{Piano di Qualifica} è definire le metriche e i requisiti m
 Il titolo del documento è ``Piano di Qualifica".
 \subparagraph{Nome del file}
 Il file sarà chiamato \texttt{piano\_di\_qualifica.tex}.
-
 \paragraph{Piano di Progetto}\label{piano-di-progetto}
 \subparagraph{Scopo}
 Lo scopo del \textit{Piano di Progetto} è definire gli obiettivi da raggiungere, stabilendo le tempistiche e chi se ne occupa e tiene traccia del loro progresso, valutando i costi sostenuti rispetto a quelli preventivati.
@@ -448,6 +457,8 @@ Si è deciso di effettuare una riunione interna ogni mercoledì dove discutere d
 I resoconti dovranno essere preparati dai singoli membri prima di ogni esposizione.\\
 Ogni incontro dovrà produrre un aggiornamento delle milestones (e diagramma di Gantt).\\
 La pianificazione dei prossimi sprint consisterà nel dividere il lavoro in item e decidere il numero di membri adatto per item.\\
+Gli item pianificati non potranno subire modifiche o cancellazioni durante il ciclo di sprint e dovranno essere portati a termine
+entro il ciclo successivo. In caso emergessero importati contestazioni o criticità il responsabile deciderà come agire.\\
 Ogni ciclo di SCRUM prevederà un nuovo responsabile, scelto per cognome in ordine alfabetico.\\
 Il responsabile dovrà assegnare le persone agli item considerando la rotazione dei ruoli.\\
 Il responsabile dovrà poi creare le issues su GitHub relative agli item e assegnarvici i membri.\\
